<resources>
    <string name="app_name">Arc En Ciel Planning</string>
    <string name="tab_calendar">Planning</string>
    <string name="tab_home">Informations</string>
    <string name="alert_generale">Information générale</string>
    <string name="alert_team">Information d\'équipe</string>
    <string name="alert_shop">Information magasin</string>
    <string name="alert_urgency">Information importante</string>
    <string name="alert_assiduity">Rappel de présence</string>
    <string name="event_comment_hint">Aucun commentaire</string>
    <string name="event_detail_join_button">S\'inscrire</string>
    <string name="button_validate">Valider</string>
    <string name="button_delete">Supprimer</string>
    <string name="new_event_button">Créer un évènement</string>
    <string name="planning_no_item_placeholder">Aucun évènement prévu à cette date</string>
    <string name="home_no_event_placeholder">Vous n\'êtes inscrit(e) dans aucun évènement prochainement</string>
    <string name="login_title">Se connecter</string>
    <string name="login_body">Veuillez saisir votre nom d’utilisateur et votre mot de passe fourni par l’association.</string>
    <string name="login_name_hint">Nom d\'utilisateur</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="login_error">Erreur de nom ou de mot de passe, veuillez réessayer</string>
    <string name="settings_title">Réglages</string>
    <string name="settings_avatar_button">Modifier</string>
    <string name="settings_user_name">Nom:</string>
    <string name="settings_user_teams">Équipes: </string>
    <string name="settings_add_user">Ajouter un membre</string>
    <string name="settings_add_alert">Ajouter une information</string>
    <string name="settings_contact_aec">Contacter Arc en Ciel</string>
    <string name="settings_contact_support">Contacter le support de l\'application</string>
    <string name="event_already_exist_multiple">Certains évènements sélectionnés existent déjà. Seuls les nouveaux évènements seront créés</string>
    <string name="event_alreasy_exist">Un évènement %s existe déjà pour cette date et heure</string>
    <string name="unknown_error">Une erreur inconnue s\'est produite, veuillez réessayer</string>
    <string name="home_no_alert_placeholder">Aucune information pour le moment</string>
</resources>