<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="52dp"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/sf_pro_text_medium"
            android:gravity="start"
            android:text="@string/settings_title"
            android:textColor="@color/greys_700"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greys_300"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:gravity="start"
                android:text="@string/settings_title"
                android:textColor="@color/greys_700"
                android:textSize="30sp" />

            <RelativeLayout
                android:id="@+id/settings_avatar_button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_home_avatar">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/settings_avatar_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:padding="4dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/settings_avatar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/sf_pro_display_bold"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    tools:text="ND" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settings_avatar_change_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/sf_pro_text_medium"
                android:padding="8dp"
                android:text="@string/settings_avatar_button"
                android:textColor="@color/greys_400"
                android:textSize="17sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_settings_item"
                android:orientation="vertical"
                android:padding="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_settings_user" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/sf_pro_text_medium"
                        android:gravity="start"
                        android:text="@string/settings_user_name"
                        android:textColor="@color/greys_700"
                        android:textSize="17sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/settings_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/sf_pro_text_regular"
                        android:gravity="start"
                        android:textColor="@color/greys_400"
                        android:textSize="17sp"
                        tools:text="Martine" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/settings_user_teams_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:flexDirection="row"
                    app:flexWrap="wrap">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/settings_user_teams_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/sf_pro_text_medium"
                        android:gravity="start"
                        android:text="@string/settings_user_teams"
                        android:textColor="@color/greys_700"
                        android:textSize="17sp" />
                </com.google.android.flexbox.FlexboxLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/settings_admin_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_settings_item"
                android:orientation="vertical"
                android:padding="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_admin_add" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/settings_add_user_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/background_validation_button"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:text="@string/settings_add_user"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/settings_add_alert_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/background_validation_button"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:text="@string/settings_add_alert"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/settings_contact_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_settings_item"
                android:orientation="vertical"
                android:padding="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_settings_contact" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/settings_contact_aec_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/background_validation_button"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:text="@string/settings_contact_aec"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/settings_contact_support_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/background_validation_button"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:text="@string/settings_contact_support"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:id="@+id/settings_margin_bottom"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>