<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_modal"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/modal_top_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_modal_top" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_detail_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_pro_text_regular"
            android:padding="12dp"
            android:text="Fermer"
            android:textColor="@color/greys_300"
            android:textSize="17sp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_detail_team_collapsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/sf_pro_display_bold"
            tools:text="Tri jouets"
            android:textColor="@color/greys_700"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:layout_toStartOf="@+id/event_detail_close_button"/>
    </RelativeLayout>
    <View
        android:id="@+id/event_detail_toolbar_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greys_100"
        android:visibility="visible"
        android:alpha="0"
        />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/event_detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/event_detail_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_bold"
                tools:text="Tri jouets"
                android:textColor="@color/greys_700"
                android:textSize="32sp"
                app:layout_constraintTop_toBottomOf="@+id/event_detail_close_button" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/event_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:fontFamily="@font/sf_pro_text_semibold"
                tools:text="Réunion d'information nouvelle année"
                android:textColor="@color/greys_400"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/event_detail_close_button" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/event_detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textSize="26sp"
                android:textColor="@color/greys_700"
                tools:text="Lundi 31 octobre 2022"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/event_detail_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:textSize="26sp"
                    android:textColor="@color/greys_700"
                    tools:text="09:00"
                    />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/event_detail_time_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    android:paddingHorizontal="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_edit"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/event_detail_users_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textSize="18sp"
                android:textColor="@color/greys_400"
                android:text="Présents "
                />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/event_detail_avatars_flexbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@+id/event_time"
                app:flexWrap="wrap"
                app:flexDirection="row"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/background_home_avatar"
                    android:src="@drawable/ic_avatar"
                    android:padding="4dp"
                    android:layout_marginEnd="4dp"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/background_home_avatar"
                    android:src="@drawable/ic_avatar"
                    android:padding="4dp"
                    android:layout_marginEnd="4dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/background_home_avatar"
                    android:src="@drawable/ic_avatar"
                    android:padding="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:textSize="18sp"
                    android:textColor="@color/greys_700"
                    tools:text="ND"/>
            </com.google.android.flexbox.FlexboxLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:background="@drawable/background_validation_button"
                android:paddingVertical="6dp"
                android:paddingHorizontal="32dp"
                android:fontFamily="@font/sf_pro_text_medium"
                android:gravity="center"
                android:textColor="@color/greys_700"
                android:textSize="18sp"
                android:text="@string/event_detail_join_button"
                android:foreground="?android:attr/selectableItemBackground"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/event_detail_comments_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textSize="18sp"
                android:textColor="@color/greys_400"
                android:text="Commentaires "
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/event_detail_comments_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_large_edit_text"
                android:padding="8dp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/event_detail_same_day_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="start"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textSize="18sp"
                android:textColor="@color/greys_400"
                android:text="Le même jour "
                />
            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:flexWrap="wrap"
                app:flexDirection="row">
                <include layout="@layout/view_teams_button"/>
                <include layout="@layout/view_teams_button"/>
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/event_detail_delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/background_delete_button"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/button_delete"
                    android:textAllCaps="false"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/event_detail_validate_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/background_validation_button"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/button_validate"
                    android:textAllCaps="false"/>
            </com.google.android.flexbox.FlexboxLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="44dp"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
